ingress-https/k8s/web-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-springboot-svc
spec:
  type: NodePort
  selector:
    app: web-app-springboot
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
